--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,48 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@font-face {
+    font-family: 'Gilroy-ExtraBold';
+    src: url(/public/fonts/Gilroy-ExtraBold.woff2) format("woff2"), url(/public/fonts/Gilroy-ExtraBold.woff) format("woff");
+    font-weight: 800;
+    font-style: normal;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+@font-face {
+    font-family: 'Gilroy';
+    src: url(/public/fonts/Gilroy-Medium.woff2) format("woff2"), url(/public/fonts/Gilroy-Medium.woff) format("woff");
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Gilroy';
+    src: url(/public/fonts/Gilroy-Light.woff2) format("woff2"), url(/public/fonts/Gilroy-Light.woff) format("woff");
+    font-weight: 300;
+    font-style: normal;
+}
+
+html,
+body {
+    padding: 0;
+    margin: 0;
+    font-size: 62.5%;
+    font-family: 'Gilroy', sans-serif;
+    font-style: normal;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+p {
+    font-size: 2rem;
+    font-weight: 300;
+    line-height: 1.7;
+    margin-bottom: 80px;
+    color: #797979;
+}
+
+h1 {
+    font-size: 7.5rem;
+    letter-spacing: 0;
+    text-align: left;
+    font-weight: 800;
 }
