--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,48 +1,35 @@
 @font-face {
-    font-family: 'Gilroy-ExtraBold';
-    src: url(/public/fonts/Gilroy-ExtraBold.woff2) format("woff2"), url(/public/fonts/Gilroy-ExtraBold.woff) format("woff");
-    font-weight: 800;
+    font-family: "Gilroy";
+    src: url("/public/fonts/Gilroy/gilroy.woff2") format("woff2"), url("/public/fonts/Gilroy/gilroy.woff") format("woff");
+    font-weight: normal;
     font-style: normal;
 }
 
-@font-face {
-    font-family: 'Gilroy';
-    src: url(/public/fonts/Gilroy-Medium.woff2) format("woff2"), url(/public/fonts/Gilroy-Medium.woff) format("woff");
-    font-weight: 500;
-    font-style: normal;
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
 }
 
-@font-face {
-    font-family: 'Gilroy';
-    src: url(/public/fonts/Gilroy-Light.woff2) format("woff2"), url(/public/fonts/Gilroy-Light.woff) format("woff");
-    font-weight: 300;
-    font-style: normal;
-}
-
-html,
 body {
-    padding: 0;
     margin: 0;
-    font-size: 62.5%;
-    font-family: 'Gilroy', sans-serif;
-    font-style: normal;
 }
 
-* {
+html {
     box-sizing: border-box;
+    font-size: 16px;
+    font-size: 100%;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    color: #121e49;
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
 }
 
-p {
-    font-size: 2rem;
-    font-weight: 300;
-    line-height: 1.7;
-    margin-bottom: 80px;
-    color: #797979;
-}
-
-h1 {
-    font-size: 7.5rem;
-    letter-spacing: 0;
-    text-align: left;
-    font-weight: 800;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Gilroy", Futura, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
