--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,8 +11,15 @@
     box-sizing: inherit;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 body {
     margin: 0;
+    background: color #f2f2f2;
+    color: #333;
 }
 
 html {
@@ -32,4 +39,35 @@ h4,
 h5,
 h6 {
     font-family: "Gilroy", Futura, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+.content {
+    max-width: 960px;
+    margin: 0 auto;
+}
+
+nav {
+    margin: 10px auto 80px;
+    padding: 10px 0;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    border-bottom: 1px solid #ddd;
+}
+
+nav a {
+    margin-left: 12px;
+}
+
+nav .logo {
+    margin-right: auto;
+}
+
+footer {
+    display: block;
+    text-align: center;
+    padding: 30px 0;
+    margin-top: 60px;
+    color: #777;
+    border-top: 1px solid #eaeaea;
 }
