--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,32 +42,10 @@ h6 {
 }
 
 .content {
-    max-width: 960px;
-    margin: 0 auto;
-}
-
-nav {
-    margin: 10px auto 80px;
-    padding: 10px 0;
+    min-height: 100vh;
+    padding: 0 0.5rem;
     display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    border-bottom: 1px solid #ddd;
-}
-
-nav a {
-    margin-left: 12px;
-}
-
-nav .logo {
-    margin-right: auto;
-}
-
-footer {
-    display: block;
-    text-align: center;
-    padding: 30px 0;
-    margin-top: 60px;
-    color: #777;
-    border-top: 1px solid #eaeaea;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
