--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,6 +2,11 @@
     color: #333;
     padding-bottom: 20px;
     text-align: center;
+    font-size: 104px;
+    color: #EC4F70;
+    line-height: 112px;
+    letter-spacing: -0.01em;
+    font-weight: normal;
 }
 
 .text {
