--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -1,7 +1,7 @@
 .navigation {
     height: 50px;
     padding: 10px;
-    background: #080F1E;
+    background: #648ce2;
     color: #fff;
     display: flex;
     align-items: center;
