--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,13 @@
     box-sizing: inherit;
 }
 
+*,
+ :active,
+ :focus,
+ :hover {
+    outline: 0!important;
+}
+
 a {
     color: inherit;
     text-decoration: none;
@@ -31,6 +38,7 @@ html {
     color: #121e49;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
+    -webkit-font-smoothing: antialiased;
 }
 
 h1,
@@ -40,4 +48,11 @@ h4,
 h5,
 h6 {
     font-family: "Gilroy", Futura, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+header,
+section,
+footer,
+article {
+    width: 100%;
 }
