--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -170,6 +170,12 @@ p.heading4 {
     }
 }
 
+@media only screen and (max-width: 40.625em) {
+    .container {
+        padding: 0 20px;
+    }
+}
+
 @media only screen and (max-width: 68.75em) {
     .container {
         max-width: 100% !important;
