--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,20 +19,31 @@
     outline: 0!important;
 }
 
-a {
-    color: inherit;
+a:active,
+a:focus,
+a:hover {
     text-decoration: none;
+}
+
+a {
+    color: #4AFFD8;
+    text-decoration: none;
+    transition: all .25s ease;
+}
+
+a:hover {
+    outline: 0;
 }
 
 body {
     margin: 0;
     background: color #f2f2f2;
     color: #333;
+    font-size: 1rem;
 }
 
 html {
     box-sizing: border-box;
-    font-size: 16px;
     font-size: 100%;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     color: #121e49;
@@ -55,4 +66,12 @@ section,
 footer,
 article {
     width: 100%;
+}
+
+p,
+ul,
+ol {
+    letter-spacing: .5px;
+    line-height: calc(26/16);
+    margin: 0 0 24px;
 }
