Added some changes to header

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,12 @@
     --green: #4AFFD8;
     --milky-way: #f8f8fb;
     --font-family--brand: "Gilroy", sans-serif;
+    --heading-one: 68px;
+    --heading-two: 48px;
+    --heading-three: 32px;
+    --heading-four: 24px;
+    --heading-five: 18px;
+    --scale: 1;
     --scale-nav-link: 1;
     --meta: 14px;
     --medium: 500;
