--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -12,7 +12,7 @@
     left: 0;
     position: absolute;
     top: 0;
-    z-index: 10;
+    z-index: 99;
 }
 
 .logo {
@@ -205,19 +205,12 @@
     font-size: var(--meta);
     font-weight: var(--bold);
     letter-spacing: .0625rem;
-    position: relative;
     overflow: unset;
     border-radius: 4px;
     text-transform: uppercase;
     padding: 1rem 2rem;
     text-align: center;
 }
-
-
-/* .hamburgerButton span {
-    position: relative;
-    z-index: 1;
-} */
 
 button .hamburgerText {
     position: relative;
@@ -233,6 +226,90 @@ button .hamburgerText {
     opacity: .8;
     text-transform: none;
     font-weight: var(--medium);
+}
+
+.sidebar {
+    position: fixed;
+    pointer-events: none;
+    z-index: 1;
+    -webkit-transition: width .5s cubic-bezier(.65, .005, .35, .995), opacity .5s cubic-bezier(.65, .005, .35, .995);
+    transition: width .5s cubic-bezier(.65, .005, .35, .995), opacity .5s cubic-bezier(.65, .005, .35, .995);
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    visibility: hidden;
+}
+
+
+/* .sidebarOpen{} */
+
+.sidebarWrapper {
+    position: fixed;
+    width: 0;
+    height: 100%;
+    top: 0;
+    right: 0;
+    overflow: hidden;
+    will-change: transform;
+    -webkit-transition: .5s cubic-bezier(.65, .005, .35, .995);
+    transition: .5s cubic-bezier(.65, .005, .35, .995);
+}
+
+.sidebarWrapperContainer {
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    background-color: #fff;
+    height: 100%;
+    width: 100%;
+    right: 0;
+    padding: 2.5rem;
+}
+
+.navAnimated {
+    opacity: 0;
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+    -webkit-transition: opacity .2s cubic-bezier(.75, .25, .25, .75), -webkit-transform .3s cubic-bezier(.75, .25, .25, .75);
+    transition: opacity .2s cubic-bezier(.75, .25, .25, .75), transform .3s cubic-bezier(.75, .25, .25, .75), -webkit-transform .3s cubic-bezier(.75, .25, .25, .75);
+}
+
+.sidebarOpen .sidebarWrapper {
+    width: 100%;
+    -webkit-transition: width .5s cubic-bezier(.4, 0, .1, 1);
+    transition: width .5s cubic-bezier(.4, 0, .1, 1);
+}
+
+.sidebarOpen .navAnimated {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    opacity: 1;
+}
+
+.navBg {
+    background-color: rgba(0, 0, 0, .2);
+    position: absolute;
+    z-index: -1;
+    -webkit-transition: .6s;
+    transition: .6s;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.sidebarNav {
+    position: relative;
+    margin-bottom: 2.5rem;
 }
 
 
@@ -266,6 +343,22 @@ button .hamburgerText {
     }
     .toggleButton {
         padding-right: var(--padding-tablet)!important;
+    }
+}
+
+
+/*720px*/
+
+@media (min-width: 720px) {
+    .sidebarWrapperContainer {
+        width: 620px;
+        padding: 5rem;
+    }
+    .sidebarNav .navbarLinkItem {
+        font-size: calc(var(--heading-two)*var(--scale));
+    }
+    .sidebarOpen .sidebarWrapper {
+        width: 620px;
     }
 }
 
