--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,12 @@
 :root {
+    --purple: #7c00ff;
     --green: #4AFFD8;
-    --milky-way: #f8f8fb;
+    --blue: #4461FB;
+    --grey: #eaeaea;
+    --yellow: #fddb60;
+    --white: #ffffff;
+    --black: #000;
+    --blue-light: #8595e0;
     --font-family--brand: "Gilroy", sans-serif;
     --heading-one: 68px;
     --heading-two: 48px;
