--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,16 +8,18 @@
     --black: #000;
     --blue-light: #8595e0;
     --font-family--brand: "Gilroy", sans-serif;
+    --body-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     --heading-one: 68px;
     --heading-two: 48px;
     --heading-three: 32px;
     --heading-four: 24px;
     --heading-five: 18px;
     --scale: 1;
-    --scale-nav-link: 1;
+    --scale-nav-link: 1.125;
     --meta: 14px;
     --medium: 500;
     --bold: 600;
+    --caption: 15px;
     --padding-mobile: 5%;
     --padding-tablet: 24px;
     --padding-desktop: 80px;
@@ -61,9 +63,11 @@ a:hover {
 }
 
 a {
-    color: #4AFFD8;
+    color: var(--green);
     text-decoration: none;
-    transition: all .25s ease;
+    -moz-animation-direction: color .12s ease-in;
+    transition: color .12s ease-in;
+    font-weight: var(--medium);
 }
 
 a:hover {
@@ -74,7 +78,8 @@ body {
     margin: 0;
     background: color #f2f2f2;
     color: #333;
-    font-size: 1rem;
+    font-size: 1.125rem;
+    line-height: 1.5;
 }
 
 html {
@@ -122,6 +127,14 @@ ol {
     letter-spacing: .5px;
     line-height: calc(26/16);
     margin: 0 0 24px;
+}
+
+li,
+ol,
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 img {
