--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -1,7 +1,9 @@
 .hero {
     background: #fff;
     overflow: hidden;
-    padding: 270px 0 171px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     position: relative;
     z-index: 2;
 }
@@ -31,11 +33,16 @@
     min-width: calc(100vw + 10px);
 }
 
-.container {
-    clear: both;
+.hero {
+    height: calc(100vh - 100px);
+}
+
+.heroContainer {
     margin: 0 auto;
-    max-width: 86%;
-    padding: 0 50px;
+    width: 100%;
+    max-width: var(--container);
+    margin-left: auto;
+    margin-right: auto;
     position: relative;
 }
 
@@ -79,16 +86,11 @@
 /*1100px*/
 
 @media only screen and (max-width: 68.75em) {
-    .hero {
+    /* .hero {
         padding: 60px 0 220px;
-    }
+    } */
     .container {
         max-width: 100% !important;
-    }
-    .hero h1 {
-        font-size: calc(52rem/16);
-        max-width: 100%;
-        width: 100%;
     }
 }
 
@@ -96,11 +98,24 @@
 /*650*/
 
 @media only screen and (max-width: 40.625em) {
-    .hero {
+    /* .hero {
         padding: 60px 0 220px;
-    }
+    } */
     .container {
         padding: 0 20px;
+    }
+}
+
+
+/*max 719px*/
+
+@media (max-width: 719px) {
+    .hero h1 {
+        font-size: 2.5rem;
+        letter-spacing: -.0625rem;
+    }
+    .subhead {
+        font-size: 1.125rem;
     }
 }
 
@@ -117,5 +132,28 @@
         -webkit-box-pack: center;
         -ms-flex-pack: center;
         justify-content: center;
+    }
+}
+
+
+/*480px - 1079*/
+
+@media (min-width: 480px) and (max-width: 1079px) {
+    .grid {
+        padding-left: var(--padding-tablet);
+        padding-right: var(--padding-tablet);
+    }
+}
+
+
+/*1080px*/
+
+@media (min-width: 1080px) {
+    .hero {
+        height: calc(100vh - 90px);
+    }
+    .grid {
+        padding-left: var(--padding-desktop);
+        padding-right: var(--padding-desktop);
     }
 }
