--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -20,30 +20,6 @@
     margin-right: auto;
 }
 
-.aboutFeature {}
-
-.about {
-    position: relative;
-}
-
-.richText h1 {
-    letter-spacing: .025rem;
-    margin-bottom: 0;
-    margin-top: 0;
-    padding-bottom: 10px;
-}
-
-.richText p {
-    margin-bottom: 0;
-}
-
-.leadParagraph {
-    font-size: 1.16667rem;
-    font-weight: 400;
-    letter-spacing: .02222rem;
-    line-height: 1.42857;
-}
-
 .blogSection {
     position: relative;
     width: 100%;
@@ -84,28 +60,12 @@
 
 /*768px*/
 
-@media (min-width: 768px) {
-    .richText {
-        display: grid;
-        grid-column-gap: 20px;
-        grid-template-columns: repeat(12, 1fr);
-    }
-    .richText h1+p {
-        margin-top: 60px;
-    }
-}
+@media (min-width: 768px) {}
 
 
 /*1024 - 1439px*/
 
-@media (min-width: 1024px) and (max-width: 1439px) {
-    .richText h1 {
-        grid-column: 3 / 11;
-        font-size: 5rem;
-        font-weight: 500;
-        line-height: .86364;
-    }
-}
+@media (min-width: 1024px) and (max-width: 1439px) {}
 
 
 /*1080px*/
@@ -135,24 +95,4 @@
 
 /*1440px*/
 
-@media (min-width: 1440px) {
-    .about {
-        padding-top: 200px;
-        padding-bottom: 200px;
-    }
-    .richText h1 {
-        grid-column: 3 / 10;
-        font-size: 8.88889rem;
-        font-weight: 500;
-        line-height: .90625;
-    }
-    .richText p {
-        grid-column: 7 / 12;
-    }
-    .leadParagraph {
-        font-size: 1.44444rem;
-        font-weight: 400;
-        letter-spacing: .02778rem;
-        line-height: 1.46154;
-    }
-}
+@media (min-width: 1440px) {}
